--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -113,7 +113,7 @@
 
 }
 .homecontent_container{
-    padding: 120px 0 87px 0;
+    padding: 102px 0px 0px 0;
 }
 .maid_bio_card{
     padding: 5px;
@@ -163,4 +163,30 @@
 }
 .maid_bio_col_row2{
     margin-top: 100px;
+}
+.footer_container_fluid{
+    background: #f2f2f2;
+}
+.footer_container{
+    padding: 20px 0 20px 0 !important;
+}
+.footer_container span a{
+    text-decoration: none;
+    color: #333;
+}
+/*----------------------------------------------  about us -----------------------------------------------*/
+.nav_title_container_fluid{
+  min-height: 165px;
+  background: #000;
+}
+.site_nav_text{
+  line-height: 165px;
+  color: #003165;
+  font-size: 1.6em;
+}
+.short_contents{
+  min-height: 700px !important;
+}
+.aboutcontent_container{
+  padding-bottom: 200px;
 }
