--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -146,10 +146,13 @@
 
 .maid_bio_card {
     padding: 5px;
-    background: #8ba5ba;
+    background: #8ba5ba !important;
     margin-left: 41px;
     color: #fff;
     margin-bottom: 15px;
+}
+.front_card{
+    background-color: #8BA5BA !important;
 }
 
 .Bio_title {
@@ -345,5 +348,27 @@
 .card-body {
     background-color: #f1f1f1;
     border-radius: 0px;
+}
+
+.maid-photo-wrap{
+  z-index: 1;
+   width: 100%;
+  height: 260px;
+  display: block;
+    background-image: url('http://666a658c624a3c03a6b2-25cda059d975d2f318c03e90bcf17c40.r92.cf1.rackcdn.com/unsplash_527bf56961712_1.JPG');
+    -webkit-filter: blur(3px);
+  -moz-filter: blur(3px);
+  -o-filter: blur(3px);
+  -ms-filter: blur(3px);
+  filter: blur(3px);
+}
+.content {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 50px;
+  z-index: 9999;
+/*  margin-left: 20px;
+  margin-right: 20px;*/
 }
 
